# pto-dsl

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  contribute_guide.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  ci_npu.yml  fast-ci.yml
docker/: Dockerfile  README.md
examples/: README.md  validate_all_examples.py
examples/autokernel/: .gitignore  benchmark.py  compile.sh  kernel.py  program.md  results.tsv
examples/ppt/: mixed_pto_vector_slide.md
openenv/: README.md  __init__.py  agent_search.py  anthropic_provider.py  geglu_config.toml  gemini_provider.py  hadamard_config.toml  hardswish_config.toml  kernel_opt_env.py  mish_config.toml  rms_norm_config.toml  sigmoid_config.toml  silu_config.toml
ptodsl/: __init__.py  _constexpr.py  bench.py  control_flow.py  core.py  ir.py  language.py  micro.py  npu_info.py  pto.py  pyproject.toml  scalar.py  tile.py
ptodsl/api/: __init__.py  _micro_registry.py  control_flow.py  micro.py  pto.py  pto_general.py  scalar.py  synchronization.py  tile.py  type_def.py
ptodsl/compiler/: ast_lowering.py  ir.py  jit.py
ptodsl/utils/: __init__.py  bench.py  codegen.py
refs/: tpushpop_cv.cpp  tpushpop_vc.cpp
scripts/: update_public_api_snapshot.py
tests/: README.md  __init__.py  _vpto_manifest.py
tests/api/: __init__.py  _contract.py  conftest.py  public_api_snapshot.json  test_control_flow_api.py  test_micro_api.py  test_pto_api.py  test_public_api_contract.py  test_scalar_api.py  test_synchronization_api.py  test_tile_api.py  test_type_def_api.py
tools/: ptodsl_capability_gate.py
(+559 files in other folders)
